updates, use proper crossref API